--- a/w3schools-html-tutorial/sample.html
+++ b/w3schools-html-tutorial/sample.html
@@ -7,6 +7,8 @@
 
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
+<a href="https://www.w3schools.com">This is a link to w3schools</a>
+<img src="w3schools.jpg" alt="W3Schools.com" width="104" height="142">
 
 </body>
 </html>
